deployments/onboarding-plan-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onboarding-plan-service
spec:
  selector:
    matchLabels:
      app: onboarding-plan-service
  replicas: 2
  template:
    metadata:
      labels:
        app: onboarding-plan-service
    spec:
      containers:
      - name: onboarding-plan-service
        image: modern-app/onboarding-plan-service
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: onboarding-plan-service
spec:
  selector:
    app: onboarding-plan-service
  ports:
  - port: 8080
    targetPort: 8080
  type: LoadBalancer
